--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 streamlit = "^1.38.0"
 pandas = "^2.2.2"
 pillow = "^10.4.0"
+boto3 = "^1.35.15"
+botocore = "^1.35.15"
 
 
 [build-system]
