--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ boto3 = "^1.35.15"
 botocore = "^1.35.15"
 plotly = "^5.24.1"
 
+# Disable packaging mode
+package-mode = false
 
 [build-system]
 requires = ["poetry-core"]
